--- a/Index.html
+++ b/Index.html
@@ -53,8 +53,8 @@
             <h1>sma ma'aif 04 kangkung</h1>
             <p>"menggali potensi menuai prestasi"</p>
             
-            <a href="#" class="btn btn-primary text-uppercase fw-bold">daftar</a>
-            <a href="#" class="btn btn-secondary text-uppercase fw-bold">login</a>
+            <a href="login.html" class="btn btn-primary text-uppercase fw-bold">daftar</a>
+            <a href="login.html" class="btn btn-secondary text-uppercase fw-bold">login</a>
             <div class="socials d-flex gap-4 justify-content-center bg-transparent p-2">
               <a href="#" id="instagram"><i class="fa-brands fa-instagram"></i></a>
               <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
